import static Assertions and use List.of instead of Collections.singletonList